<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/Title2Regular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_title" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/BodyRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/rate_text" />

    <com.thebrodyaga.englishsounds.screen.view.AppRatingBar
        android:id="@+id/app_rating_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/rate"
        android:textAllCaps="true"
        android:textAppearance="@style/BodyRegular"
        android:textColor="?attr/colorOnPrimarySurface"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rate_later_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/later"
        android:textAllCaps="true"
        android:textAppearance="@style/BodyRegular"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />
</LinearLayout>